Name:           9ptorrent
Version:        0

Category:       Network
Synopsis:       a bittorrent client with a filesystem interface
License:        OtherLicense
License-file:   LICENSE


Build-Type:     Simple
Cabal-Version:  >= 1.2

Executable      9ptorrent
        Main-is:        9ptorrent.hs
        ghc-options:    -threaded
-- If the stuff works with the older versions, you're welcome to fix them
        Build-depends:  
                        base >= 4 && < 5,
                        bytestring >= 0.9.1.7,
                        network >= 2.3,
                        Network-NineP >= 0.0.2,
                        containers >= 0.3.0.0,
                        mtl >= 1.1.1.0,
                        bencode >= 0.5,
                        Crypto >= 4.2.0,
                        random >= 1.0.1.1,
                        HTTP >= 4000.2.6,
                        cereal >= 0.3.5.2,
                        curl >= 1.3.7,
                        download-curl >= 0.1.4,
                        data-accessor-template >= 0.2.1.10,
                        data-accessor >= 0.2.2.3,
                        mstate >= 0.2.4,
                        transformers >= 0.3.0.0
