Name:           9ptorrent
Version:        0

Category:       Network
Synopsis:       a bittorrent client with a filesystem interface
License:        OtherLicense
License-file:   LICENSE


Build-Type:     Simple
Cabal-Version:  >= 1.2

Executable      9ptorrent
        Main-is:        9ptorrent.hs
        ghc-options:    -threaded
-- If the stuff works with the older versions, you're welcome to fix them
        Build-depends:  
                        base >= 4 && < 5,
                        bytestring >= 0.9.1.7 && < 0.10,
                        network >= 2.3 && < 2.5,
                        Network-NineP >= 0.1.0 && < 0.2,
                        containers >= 0.3.0.0 && < 0.5,
                        mtl >= 1.1.1.0 && < 2.2,
                        bencode >= 0.5 && < 0.6,
                        Crypto >= 4.2.0 && < 4.3,
                        random >= 1.0.1.1 && < 1.1,
                        HTTP >= 4000.2.6 && < 4000.3,
                        cereal >= 0.3.5.2 && < 0.4,
                        curl >= 1.3.7 && < 1.4,
                        download-curl >= 0.1.4 && < 0.2,
                        data-accessor-template >= 0.2.1.10 && < 0.3,
                        data-accessor >= 0.2.2.3 && < 0.3,
                        mstate >= 0.2.4 && < 0.3,
                        transformers >= 0.3.0.0 && < 0.4
